bug: [YAP-25] fix missing background animation (#12)

--- a/sanzang/src/globals.css
+++ b/sanzang/src/globals.css
@@ -18,7 +18,7 @@
 }
 
 .animate-bg-scroll {
-  background: url("bg-logo.png") repeat 0 0;
+  background: url("/bg-logo.png") repeat 0 0;
   background-size: 50px 50px;
   animation: bg-scrolling-reverse 5s infinite linear;
 }
